# Nasa

./: .replit  package-lock.json  package.json  pyproject.toml  replit.md  start-dev.js  start.sh  vite.config.ts
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted-Projet-AirGlobe-Pr-diction-de-la-qualit-de-l-air-avec-TEMPO-stations-au-sol-m-t-o-Objectif--1759252897179_1759252897180.txt
client/: index.html
client/src/: App.tsx  index.css  main.tsx
client/src/components/: AirQualityPanel.tsx  CitySearch.tsx  ForecastChart.tsx  Globe.tsx  GlobeCesium.tsx  HealthAdvicePanel.tsx  PollutantCard.tsx  WeatherCard.tsx
client/src/hooks/: useAirQuality.ts  useCitySearch.ts
client/src/lib/: constants.ts  types.ts
server/: config.py  main.py  routes.ts
server/api/: airquality.py  cities.py
server/models/: air_quality.py
server/services/: cache_service.py  ml_service.py  openaq_service.py  tempo_service.py  weather_service.py
server/utils/: aqi_calculator.py  geo_utils.py
