[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cachetools>=6.2.0",
    "earthaccess>=0.15.1",
    "fastapi>=0.118.0",
    "harmony-py>=1.3.1",
    "httpx>=0.28.1",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pydantic>=2.11.9",
    "pyproj>=3.7.2",
    "python-dateutil>=2.9.0.post0",
    "rasterio>=1.4.3",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.37.0",
    "xarray>=2025.9.1",
]
